--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.10.2",
+    "axios": "^0.21.1",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "sass-loader": "^10.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
